crates/ferrum-interfaces/tests/ui/vnext/fail/plan_runtime_resources_fields_are_private.rs
use ferrum_interfaces::vnext::{DeviceRuntime, PlanRuntimeResources};

fn inspect<R: DeviceRuntime>(resources: PlanRuntimeResources<R>) {
    let PlanRuntimeResources { phase, .. } = resources;
    let _ = phase;
}

fn main() {}
